--- a/.github/workflows/main_cicd-practical-3.yml
+++ b/.github/workflows/main_cicd-practical-3.yml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch:
 
 env:
-  WEBAPP_NAME: "cicdp"
+  WEBAPP_NAME: "CICDP-Practical-3"
   NODE_VERSION: "20.x"
   API_DIR: "api"
   WEB_DIR: "web"
